Se modificó url de la página soluciones

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             </div>
                             <div class="card-stats">
                                 <div class="stat">
-                                    <a href="https://ticsab.herokuapp.com/" target="_blank">
+                                    <a href="https://armandobolanios.github.io/soluciones/" target="_blank">
                                         <span class="link"></span>Ir al sitio web
                                     </a>
                                 </div>
